fix nested lists and responsive images on mobile

--- a/static/src/styles/pages/_article.scss
+++ b/static/src/styles/pages/_article.scss
@@ -50,6 +50,10 @@
     .articleContent {
       max-width: 690px;
 
+      @media (max-width: $vs-breakpoint-md) {
+        max-width: 100%;
+      }
+
       @media (min-width: $vs-breakpoint-md) {
         width: 70%;
       }
@@ -83,7 +87,7 @@
       }
 
       ul, ol {
-        padding: 0 1.5rem;
+        padding: 0 0 0 1.5rem;
         list-style: initial;
       }
 
